--- a/ZZZServer/ZZZServer.csproj
+++ b/ZZZServer/ZZZServer.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FbxSharp" Version="0.9.0" />
       <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Serilog" Version="4.3.0" />
