--- a/ZZZServer/ConfigTableData/main_tbcharacterconfig.json
+++ b/ZZZServer/ConfigTableData/main_tbcharacterconfig.json
@@ -2,25 +2,161 @@
   {
     "id": 1,
     "name": "Anby",
-    "max_segment": 4,
     "icon_loc": "IconSticker0003",
+    "role_select_icon_loc": "IconRoleSelect01",
     "prefab_loc": "Anby",
     "sim_prefab_loc": "Sim_Anby"
   },
   {
     "id": 2,
     "name": "Soldier11",
-    "max_segment": 4,
     "icon_loc": "IconSticker0001",
+    "role_select_icon_loc": "IconRoleSelect05",
     "prefab_loc": "Soldier11",
     "sim_prefab_loc": "Sim_Soldier11"
   },
   {
     "id": 3,
     "name": "Ellen",
-    "max_segment": 3,
     "icon_loc": "IconSticker0002",
+    "role_select_icon_loc": "IconRoleSelect21",
     "prefab_loc": "Ellen",
     "sim_prefab_loc": "Sim_Ellen"
+  },
+  {
+    "id": 4,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect09",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 5,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect10",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 6,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect11",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 7,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect12",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 8,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect14",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 9,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect15",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 10,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect16",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 11,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect17",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 12,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect18",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 13,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect20",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 14,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect22",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 15,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect23",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 16,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect24",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 17,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect27",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 18,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect28",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 19,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect29",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
+  },
+  {
+    "id": 20,
+    "name": "",
+    "icon_loc": "",
+    "role_select_icon_loc": "IconRoleSelect30",
+    "prefab_loc": "",
+    "sim_prefab_loc": ""
   }
 ]
