--- a/ZZZServer/ZZZServer.csproj
+++ b/ZZZServer/ZZZServer.csproj
@@ -31,6 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="ConfigAnimData\" />
       <Folder Include="ConfigTableData\" />
       <Folder Include="ConfigTable\" />
     </ItemGroup>
