--- a/ZZZServer/ConfigTableData/main_tbmonsterconfig.json
+++ b/ZZZServer/ConfigTableData/main_tbmonsterconfig.json
@@ -8,7 +8,8 @@
     "def": 100,
     "max_daze": 100,
     "stun_duration": 10,
-    "stun_dmg_multiplier": 1.5
+    "stun_dmg_multiplier": 1.5,
+    "icon_loc": "IconMonster001"
   },
   {
     "id": 2,
@@ -19,6 +20,7 @@
     "def": 200,
     "max_daze": 100,
     "stun_duration": 10,
-    "stun_dmg_multiplier": 2
+    "stun_dmg_multiplier": 2,
+    "icon_loc": "IconMonster001"
   }
 ]
