调整配置表数据位置

--- a/ZZZServer/Data/App.toml
+++ b/ZZZServer/Data/App.toml
@@ -1,6 +1,6 @@
 ActionDataPath = "Data/ActionData"
 NavigationDataPath = "Data/NavigationData"
-ConfigTableDataPath = "ConfigTableData"
+ConfigTableDataPath = "Data/ConfigTableData"
 
 [Database]
 ConnectionString = "mongodb://localhost:27017"
