修改配置表

--- a/ZZZServer/Data/ConfigTableData/main_tbdiscconfig.json
+++ b/ZZZServer/Data/ConfigTableData/main_tbdiscconfig.json
@@ -3,7 +3,8 @@
     "id": 1,
     "name": "震星迪斯科",
     "rank": "S",
-    "icon_loc": "Leather Boot",
+    "icon_loc": "Drive_Disc_Shockstar_Disco_S",
+    "equipment_icon_loc": "Drive_Disc_Shockstar_Disco_Icon",
     "set_ability_2_name": "ZhenXingDiSiKe_2",
     "set_ability_4_name": "ZhenXingDiSiKe_4",
     "set_ability_2_desc": "冲击力提升6%。",
@@ -14,7 +15,8 @@
     "id": 2,
     "name": "摇摆爵士",
     "rank": "S",
-    "icon_loc": "Leather Armor",
+    "icon_loc": "Drive_Disc_Swing_Jazz_S",
+    "equipment_icon_loc": "Drive_Disc_Swing_Jazz_Icon",
     "set_ability_2_name": "YaoBaiJueShi_2",
     "set_ability_4_name": "YaoBaiJueShi_4",
     "set_ability_2_desc": "能量自动回复提升20%。",
@@ -25,7 +27,8 @@
     "id": 3,
     "name": "炎狱重金属",
     "rank": "S",
-    "icon_loc": "Iron Helmet",
+    "icon_loc": "Drive_Disc_Inferno_Metal_S",
+    "equipment_icon_loc": "Drive_Disc_Inferno_Metal_Icon",
     "set_ability_2_name": "YanYuZhongJinShu_2",
     "set_ability_4_name": "YanYuZhongJinShu_4",
     "set_ability_2_desc": "火属性伤害提升10%。",
@@ -36,7 +39,8 @@
     "id": 4,
     "name": "河豚电音",
     "rank": "S",
-    "icon_loc": "Bag",
+    "icon_loc": "Drive_Disc_Puffer_Electro_S",
+    "equipment_icon_loc": "Drive_Disc_Puffer_Electro_Icon",
     "set_ability_2_name": "HeTunDianYin_2",
     "set_ability_4_name": "HeTunDianYin_4",
     "set_ability_2_desc": "穿透率提升8%。",
