--- a/ZZZServer/Data/ConfigTableData/main_tbweaponconfig.json
+++ b/ZZZServer/Data/ConfigTableData/main_tbweaponconfig.json
@@ -3,7 +3,7 @@
     "id": 1,
     "name": "硫磺石",
     "rank": "S",
-    "icon_loc": "Iron Sword",
+    "icon_loc": "W-Engine_The_Brimstone_Icon",
     "max_level_base_attr_type": 101,
     "max_level_base_attr_value": 684,
     "max_level_advanced_attr_type": 102,
@@ -16,7 +16,7 @@
     "id": 2,
     "name": "德玛拉电池II型",
     "rank": "A",
-    "icon_loc": "Axe",
+    "icon_loc": "W-Engine_Demara_Battery_Mark_II_Icon",
     "max_level_base_attr_type": 101,
     "max_level_base_attr_value": 624,
     "max_level_advanced_attr_type": 402,
@@ -29,7 +29,7 @@
     "id": 3,
     "name": "星微引擎",
     "rank": "A",
-    "icon_loc": "Shovel",
+    "icon_loc": "W-Engine_Starlight_Engine_Icon",
     "max_level_base_attr_type": 101,
     "max_level_base_attr_value": 594,
     "max_level_advanced_attr_type": 102,
@@ -42,7 +42,7 @@
     "id": 4,
     "name": "霰落星殿",
     "rank": "S",
-    "icon_loc": "Hammer",
+    "icon_loc": "W-Engine_Hailstorm_Shrine_Icon",
     "max_level_base_attr_type": 101,
     "max_level_base_attr_value": 743,
     "max_level_advanced_attr_type": 800,
