--- a/ZZZServer/Data/ConfigTableData/main_tbdialoguegraphsentenceconfig.json
+++ b/ZZZServer/Data/ConfigTableData/main_tbdialoguegraphsentenceconfig.json
@@ -70,8 +70,8 @@
       {
         "sub_cid": 2,
         "next_sub_cid": 10002,
-        "name": "大大守村人",
-        "content": "我是大大守村人。最近有怪物「小小哥布林」袭击。帮帮我们，我会告诉你更多。",
+        "name": "普普通通垃圾桶",
+        "content": "我是普普通通垃圾桶。最近有怪物「小小哥布林」袭击。帮帮我们，我会告诉你更多。",
         "exit_cmd": "",
         "arg1": "",
         "arg2": "",
@@ -85,7 +85,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": -1,
-        "name": "大大守村人",
+        "name": "普普通通垃圾桶",
         "content": "快去吧！",
         "exit_cmd": "",
         "arg1": "",
@@ -100,7 +100,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": 10001,
-        "name": "大大守村人",
+        "name": "普普通通垃圾桶",
         "content": "这么快就解决了？",
         "exit_cmd": "",
         "arg1": "",
@@ -110,7 +110,7 @@
       {
         "sub_cid": 2,
         "next_sub_cid": 0,
-        "name": "大大守村人",
+        "name": "普普通通垃圾桶",
         "content": "太厉害啦！",
         "exit_cmd": "",
         "arg1": "",
@@ -120,8 +120,8 @@
       {
         "sub_cid": 3,
         "next_sub_cid": -1,
-        "name": "大大守村人",
-        "content": "这样，你找普普通通村长吧，他知道更多哦。",
+        "name": "普普通通垃圾桶",
+        "content": "这样，你找有点特别的垃圾桶长吧，他知道更多哦。",
         "exit_cmd": "",
         "arg1": "",
         "arg2": "",
@@ -135,7 +135,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": -1,
-        "name": "大大守村人",
+        "name": "普普通通垃圾桶",
         "content": "我知道的就这么多，去找普普通通村长吧。",
         "exit_cmd": "",
         "arg1": "",
@@ -150,7 +150,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": 0,
-        "name": "普普通通村长",
+        "name": "有点特别的垃圾桶",
         "content": "你好呀，圆鲨鲨。",
         "exit_cmd": "",
         "arg1": "",
@@ -160,7 +160,7 @@
       {
         "sub_cid": 2,
         "next_sub_cid": 0,
-        "name": "普普通通村长",
+        "name": "有点特别的垃圾桶",
         "content": "对的对的，总之，去捡点材料吧。",
         "exit_cmd": "",
         "arg1": "",
@@ -170,7 +170,7 @@
       {
         "sub_cid": 3,
         "next_sub_cid": -1,
-        "name": "普普通通村长",
+        "name": "有点特别的垃圾桶",
         "content": "拜拜。",
         "exit_cmd": "",
         "arg1": "",
@@ -185,7 +185,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": 0,
-        "name": "普普通通村长",
+        "name": "有点特别的垃圾桶",
         "content": "我果然没看错！",
         "exit_cmd": "",
         "arg1": "",
@@ -195,7 +195,7 @@
       {
         "sub_cid": 2,
         "next_sub_cid": -1,
-        "name": "普普通通村长",
+        "name": "有点特别的垃圾桶",
         "content": "你就是我们要找的勇者！",
         "exit_cmd": "",
         "arg1": "",
@@ -210,7 +210,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": -1,
-        "name": "大大守村人",
+        "name": "普普通通垃圾桶",
         "content": "晴天，只想舒舒服服晒晒太阳...",
         "exit_cmd": "",
         "arg1": "",
@@ -225,7 +225,7 @@
       {
         "sub_cid": 1,
         "next_sub_cid": -1,
-        "name": "普普通通村长",
+        "name": "有点特别的垃圾桶",
         "content": "今天做点什么呢...",
         "exit_cmd": "",
         "arg1": "",
