--- a/ZZZServer/Data/ConfigTableData/main_tbquestchainconfig.json
+++ b/ZZZServer/Data/ConfigTableData/main_tbquestchainconfig.json
@@ -18,7 +18,7 @@
         "quest_cid": 1,
         "next_quest_cid": 2,
         "name": "与前面的人对话",
-        "desc": "醒来发现自己身处哈基米星球，探索一下附近吧。",
+        "desc": "来到奇怪的地方，探索一下附近吧。",
         "npc_overrides": [
           {
             "npc_cid": 1,
@@ -37,7 +37,7 @@
         "quest_cid": 2,
         "next_quest_cid": 3,
         "name": "击败「小小哥布林」",
-        "desc": "帮帮大大守村人，击败怪物。",
+        "desc": "帮帮这个人。",
         "npc_overrides": [
           {
             "npc_cid": 1,
@@ -53,7 +53,7 @@
         "$type": "DialogueQuestConfig",
         "quest_cid": 3,
         "next_quest_cid": 0,
-        "name": "与大大守村人对话",
+        "name": "与普普通通垃圾桶对话",
         "desc": "问问发生了什么了。",
         "npc_overrides": [
           {
@@ -87,7 +87,7 @@
         "$type": "DialogueQuestConfig",
         "quest_cid": 1,
         "next_quest_cid": 2,
-        "name": "与普普通通村长对话",
+        "name": "与有点特别的垃圾桶对话",
         "desc": "你到底知不知道。",
         "npc_overrides": [
           {
@@ -124,26 +124,26 @@
         "quest_cid": 3,
         "next_quest_cid": 4,
         "name": "提升任意3个驱动盘到15级",
-        "desc": "狠狠提升数值！",
+        "desc": "我独自升级",
         "npc_overrides": [],
         "complete_get_quest_chain_cid": 0,
         "trunk_npc_cids": [],
-        "count": 1,
+        "count": 3,
         "target_level": 15
       },
       {
         "$type": "GotoQuestConfig",
         "quest_cid": 4,
         "next_quest_cid": 5,
-        "name": "前往废弃实验室",
+        "name": "前往目标地点",
         "desc": "感觉要发生什么。",
         "npc_overrides": [],
         "complete_get_quest_chain_cid": 0,
         "trunk_npc_cids": [],
         "center": {
-          "x": 50,
-          "y": 1,
-          "z": 0
+          "x": 18.105,
+          "y": -1.65,
+          "z": -36.255
         },
         "radius": 10
       },
@@ -151,8 +151,8 @@
         "$type": "DefeatQuestConfig",
         "quest_cid": 5,
         "next_quest_cid": 6,
-        "name": "击败「反正很厉害的哥布林」",
-        "desc": "狠狠击败。",
+        "name": "击败「大大哥布林」",
+        "desc": "击败。",
         "npc_overrides": [],
         "complete_get_quest_chain_cid": 0,
         "trunk_npc_cids": [],
@@ -163,8 +163,8 @@
         "$type": "DialogueQuestConfig",
         "quest_cid": 6,
         "next_quest_cid": 0,
-        "name": "与普普通通村长对话",
-        "desc": "回复村长。",
+        "name": "与有点特别的垃圾桶对话",
+        "desc": "回复有点特别的垃圾桶。",
         "npc_overrides": [
           {
             "npc_cid": 2,
